--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "framer-motion": "4.1.17",
+    "gh-pages": "^3.2.3",
     "joi-browser": "^13.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -17,11 +18,13 @@
     "@babel/runtime": "7.13.8",
     "typescript": "4.1.3"
   },
+  "homepage": "https://iamronaldosunmu.github.io/Wisha",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
